--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
+    "dotenv": "^10.0.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
