--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 API_URL=https://my-json-server.typicode.com
+
+CONTENTFUL_SPACE_ID=5qwfx9eq4jn0
+CONTENTFULL_ACCESS_KEY=rpAgJjs_w2hrp5n9YMcmgTVwAueNi_DUNZ8dkxbWrXk
